Fix - Overflow lista servidores

--- a/public/style/listaServidores.css
+++ b/public/style/listaServidores.css
@@ -111,7 +111,8 @@ button {
     background-color: rgba(254, 253, 255, 1);
     border: 3px solid rgb(232, 230, 234);
     width: 90%;
-    border-radius: 12px;    
+    border-radius: 12px;
+    overflow: auto;
 }
 .lista-maquina h2{
     margin-left: 30px;
